--- a/home-1.html
+++ b/home-1.html
@@ -67,7 +67,7 @@
         <!-- cursor end -->
 
         <!-- preloader -->
-        <!-- <div class="mil-preloader">
+        <div class="mil-preloader">
             <div class="mil-preloader-animation">
                 <div class="mil-pos-abs mil-animation-1">
                     <p class="mil-h3 mil-black mil-thin">Pioneering</p>
@@ -81,7 +81,7 @@
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
         <!-- preloader end -->
 
         <!-- scrollbar progress -->
