Responsiveness in design page

--- a/design.html
+++ b/design.html
@@ -773,7 +773,7 @@
                                 <h3 class="hd-cor">Food On Focus - Project 1</h3>
                             </div>
                             <div class="image-container2">
-                                <img id="hoverable-img" style="height: 60vh;" src="img/works/2.jpg" alt="Project Image">
+                                <img id="hoverable-img"  src="img/works/2.jpg" alt="Project Image">
                             </div>
                         </div>
                         <div class="but-mid">
@@ -832,7 +832,7 @@
                                 <h3 class="hd-cor">Food On Focus - Project 1</h3>
                             </div>
                             <div class="image-container2">
-                                <img id="hoverable-img" style="height: 60vh;" src="img/works/3.jpg" alt="Project Image">
+                                <img id="hoverable-img"  src="img/works/3.jpg" alt="Project Image">
                             </div>
                         </div>
                         <div class="but-mid">
@@ -891,7 +891,7 @@
                                 <h3 class="hd-cor">Food On Focus - Project 1</h3>
                             </div>
                             <div class="image-container2">
-                                <img id="hoverable-img" style="height: 60vh;" src="img/works/5.jpg" alt="Project Image">
+                                <img id="hoverable-img"  src="img/works/5.jpg" alt="Project Image">
                             </div>
                         </div>
                         <div class="but-mid">
@@ -950,7 +950,7 @@
                                 <h3 class="hd-cor">Food On Focus - Project 1</h3>
                             </div>
                             <div class="image-container2">
-                                <img id="hoverable-img" style="height: 60vh;" src="img/works/6.jpg" alt="Project Image">
+                                <img id="hoverable-img"  src="img/works/6.jpg" alt="Project Image">
                             </div>
                         </div>
                         <div class="but-mid">
