--- a/design.html
+++ b/design.html
@@ -306,13 +306,13 @@
                                     <span class="counter" data-target="20">0</span>
                                 </div>
                             </div>
-                            <div class="col-md-3 col-sm-6">
+                            <!-- <div class="col-md-3 col-sm-6">
                                 <div class="counter-box">
                                     <i class="fas fa-clock"></i>
                                     <p>Experience</p>
                                     <span class="counter" data-target="25">0</span>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <!-- background image -->
