Home page minor changes done 2

--- a/design.html
+++ b/design.html
@@ -463,50 +463,6 @@
                                         consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing
                                         elitLorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                                 </li>
-                                <li class="expandable">
-                                    <div class="ex-list-item">
-                                        <div class="ex-h3-icon">
-                                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"
-                                                focusable="false"
-                                                color="var(--token-c8809533-d74e-4474-af14-ef3a211efd13, rgb(1, 70, 112))"
-                                                style="user-select: none;width: 4%;height: 6%;display: inline-block;fill: rgb(0, 0, 0);color: rgb(0, 0, 0);flex-shrink: 0;">
-                                                <g color="var(--token-c8809533-d74e-4474-af14-ef3a211efd13, rgb(1, 70, 112))"
-                                                    weight="thin">
-                                                    <path
-                                                        d="M220,216a4,4,0,0,1-4,4H40a4,4,0,0,1,0-8H216A4,4,0,0,1,220,216Zm-80-40V80a12,12,0,0,1,12-12h40a12,12,0,0,1,12,12v96a12,12,0,0,1-12,12H152A12,12,0,0,1,140,176Zm8,0a4,4,0,0,0,4,4h40a4,4,0,0,0,4-4V80a4,4,0,0,0-4-4H152a4,4,0,0,0-4,4Zm-96,0V40A12,12,0,0,1,64,28h40a12,12,0,0,1,12,12V176a12,12,0,0,1-12,12H64A12,12,0,0,1,52,176Zm8,0a4,4,0,0,0,4,4h40a4,4,0,0,0,4-4V40a4,4,0,0,0-4-4H64a4,4,0,0,0-4,4Z">
-                                                    </path>
-                                                </g>
-                                            </svg>
-                                            <h3>Award Winning</h3>
-                                        </div>
-                                        <span class="ex-plus">+</span>
-                                    </div>
-                                    <p class="expanded" style="text-align:justify">Lorem ipsum dolor sit amet,
-                                        consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing
-                                        elitLorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                </li>
-                                <li class="expandable">
-                                    <div class="ex-list-item">
-                                        <div class="ex-h3-icon">
-                                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"
-                                                focusable="false"
-                                                color="var(--token-c8809533-d74e-4474-af14-ef3a211efd13, rgb(1, 70, 112))"
-                                                style="user-select: none;width: 4%;height: 6%;display: inline-block;fill: rgb(0, 0, 0);color: rgb(0, 0, 0);flex-shrink: 0;">
-                                                <g color="var(--token-c8809533-d74e-4474-af14-ef3a211efd13, rgb(1, 70, 112))"
-                                                    weight="thin">
-                                                    <path
-                                                        d="M220,216a4,4,0,0,1-4,4H40a4,4,0,0,1,0-8H216A4,4,0,0,1,220,216Zm-80-40V80a12,12,0,0,1,12-12h40a12,12,0,0,1,12,12v96a12,12,0,0,1-12,12H152A12,12,0,0,1,140,176Zm8,0a4,4,0,0,0,4,4h40a4,4,0,0,0,4-4V80a4,4,0,0,0-4-4H152a4,4,0,0,0-4,4Zm-96,0V40A12,12,0,0,1,64,28h40a12,12,0,0,1,12,12V176a12,12,0,0,1-12,12H64A12,12,0,0,1,52,176Zm8,0a4,4,0,0,0,4,4h40a4,4,0,0,0,4-4V40a4,4,0,0,0-4-4H64a4,4,0,0,0-4,4Z">
-                                                    </path>
-                                                </g>
-                                            </svg>
-                                            <h3>Award Winning</h3>
-                                        </div>
-                                        <span class="ex-plus">+</span>
-                                    </div>
-                                    <p class="expanded" style="text-align:justify">Lorem ipsum dolor sit amet,
-                                        consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing
-                                        elitLorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                </li>
                             </ul>
                         </div>
                     </div>
@@ -1311,7 +1267,7 @@
           
                 <!-- Copyright -->
                 <div class="text-center" style="background-color: rgba(0, 0, 0, 0.05);">
-                  <p style="color: #972221;">&copy; <span id="copyrightYear"></span> foodonfocus.com | All rights reserved.</p>
+                  <p style="color: #972221;margin: 0;">&copy; <span id="copyrightYear"></span> foodonfocus.com | All rights reserved.</p>
               <script>
                   var currentYear = new Date().getFullYear();
                   document.getElementById('copyrightYear').innerHTML = currentYear;
