consult page section 2

--- a/content.html
+++ b/content.html
@@ -276,6 +276,36 @@
                 </script>
                 <!-- bg video playing end -->
 
+
+                
+
+                <!-- section 2 -->
+                <section class="consult4">
+                    <div class="container4">
+                        <div class="text-section4">
+                            <div class="heading4">
+                                <!-- <span class="dot4"></span> -->
+                                <h6 style="font-size: 1.5rem; color: #fbae19;">• Services</h6>
+                            </div>
+                            <div class="services4">
+                                <div class="service-item4">Branding</div>
+                                <div class="service-item4">Marketing</div>
+                                <div class="service-item4">Strategy</div>
+                                <div class="service-item4">Content</div>
+                                <div class="service-item4">Advisory</div>
+                            </div>
+                        </div>
+                        <div class="video-section4">
+                            <video class="video4" autoplay loop muted>
+                                <source src="video/vid_2.mp4" type="video/mp4">
+                                Your browser does not support the video tag.
+                            </video>
+                        </div>
+                    </div>
+                </section>
+
+                <!-- section 2 -->
+
                 <!-- Gallery -->
                 <section class="gallery">
                     <h2 id="gallerytxt">Visit Our Gallery!</h2>
