consult page section 3

--- a/design.html
+++ b/design.html
@@ -114,13 +114,13 @@
                             <nav class="mil-main-menu" id="swupMenu">
                                 <ul>
                                     <li class="mil-up mil-active mil-dark">
-                                        <a class="mil-dark" href="home-1.html">Home</a>
+                                        <a class="mil-dark" href="home-1.html">Home Page</a>
                                     </li>
                                     <li class="mil-up mil-dark">
-                                        <a class="" href="home-1.html">Design</a>
+                                        <a class="" href="home-1.html">Branding & Design</a>
                                     </li>
                                     <li class="mil-up mil-dark">
-                                        <a class="mil-dark" href="#.">Services</a>
+                                        <a class="mil-dark" href="content.html">Content Production</a>
                                     </li>
                                     <li class="mil-up mil-dark">
                                         <a class="mil-dark" href="#.">Contact</a>
