--- a/content.html
+++ b/content.html
@@ -114,13 +114,13 @@
                             <nav class="mil-main-menu" id="swupMenu">
                                 <ul>
                                     <li class="mil-up mil-active mil-dark">
-                                        <a class="mil-dark" href="home-1.html">Home</a>
+                                        <a class="mil-dark" href="home-1.html">Home Page</a>
                                     </li>
                                     <li class="mil-up mil-dark">
-                                        <a class="" href="home-1.html">Design</a>
+                                        <a class="" href="home-1.html">Branding & Design</a>
                                     </li>
                                     <li class="mil-up mil-dark">
-                                        <a class="mil-dark" href="#.">Services</a>
+                                        <a class="mil-dark" href="content.html">Content Production</a>
                                     </li>
                                     <li class="mil-up mil-dark">
                                         <a class="mil-dark" href="#.">Contact</a>
@@ -305,6 +305,30 @@
                 </section>
 
                 <!-- section 2 -->
+
+                <!-- vertical image -->
+                <section class="vertical-img">
+                    <h2 id="gallerytxt" style="padding-top: 3px;">Top Rated !</h2>
+                <div class="container5">
+                    <div class="box5">
+                      <img src="https://source.unsplash.com/1000x800">
+                      <span>IMG 1</span>
+                    </div>
+                    <div class="box5">
+                      <img src="https://source.unsplash.com/1000x802">
+                      <span>IMG 2</span>
+                    </div>
+                    <div class="box5">
+                      <img src="https://source.unsplash.com/1000x804">
+                      <span>IMG 3</span>
+                    </div>
+                    <div class="box5">
+                      <img src="https://source.unsplash.com/1000x806">
+                      <span>IMG 4</span>
+                    </div>
+                  </div>
+                </section>
+                <!-- vertical image -->
 
                 <!-- Gallery -->
                 <section class="gallery">
